# the-beat-of-space

./: Cargo.toml  README.md  build.rs
assets/: config.json  goldn.mid  lullaby.mid  song_data.json
assets/songs/: song_data.json  test.json
assets/songs/easy/: dropit.json  forestlullaby.json  goldn.json
assets/songs/expert/: dropit.json  forestlullaby.json  goldn.json
assets/songs/extreme/: dropit.json  forestLullaby.json  forestlullaby.json  goldn.json  strong.json
assets/songs/hard/: dropit.json  forestlullaby.json  goldn.json
assets/songs/medium/: dropit.json  forestlullaby.json  goldn.json
egui-macroquad/: Cargo.toml
quad-gif/: Cargo.toml
src/: beatmap_editor_scene.rs  error_scene.rs  game_end_scene.rs  game_map_scene.rs  main.rs  main_menu_scene.rs  midi_converter.rs  note_gameplay_scene.rs  porpus_scene.rs  scene.rs  tutorial_scene.rs  ui.rs  utils.rs
src/game_map_scene/: world.rs
src/note_gameplay_scene/: constants.rs  score_texts.rs  song.rs
worlds/starkoth/: world.json
