[package]
name = "the_beat_of_space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
kira = "0.7.1"
macroquad = { version = "0.3.25", default-features = false, features = [] }
macroquad_aspect = { git = "https://github.com/TheEmeraldBee/macroquad_aspect.git" }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
thousands = "0.2.0"
