[package]
name = "the_beat_of_space"
version = "0.1.0"
edition = "2021"
description = "The Beat Of Space"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
egui-macroquad = { version = "0.12.0" }
image = "0.24.5"
kira = "0.7.1"
macroquad = { version = "0.3.25", default-features = false }
macroquad_aspect = { git = "https://github.com/TheEmeraldBee/macroquad_aspect.git" }
midly = "0.5.3"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
thousands = "0.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[patch.crates-io]
egui-macroquad = { path = "../egui-macroquad" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
[profile.release.package."*"]
opt-level = 3

[package.metadata.bundle]
name = "TheBeatOfSpace"
identifier = "com.teamscilla.thebeatofspace"
icon = ["assets/images/icon_small.png", "assets/images/icon_med.png", "assetsimages/icon_large.png"]
version = "0.1.0"
resources = ["assets"]
copyright = ""
category = "Game"
short_description = "The Beat Of Space"
description = "The Beat Of Space"
long_description = """
Video Game The Beat Of Space
"""
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = []
osx_url_schemes = ["com.teamscilla.thebeatofspace"]
